crates/monty/tests/heap_reader_compile_fail_cases/double_get_mut.stderr
error[E0499]: cannot borrow `*reader` as mutable more than once at a time
  --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:51:31
   |
50 |         let ref_a = a.get_mut(reader);
   |                               ------ first mutable borrow occurs here
51 |         let ref_b = b.get_mut(reader);
   |                               ^^^^^^ second mutable borrow occurs here
52 |         let _ = (ref_a, ref_b);
   |                  ----- first borrow later used here
For more information about this error, try `rustc --explain E0499`.
